styles/style.css
:root {
    scroll-behavior: smooth;
}

html {
    --background: #1b222b;
}

html[theme='light'] {
    --text-color: rgb(25, 29, 59);
    --background: rgb(222, 222, 222);
    
    --text-color-light: rgb(230, 238, 255);
    --text-color-important: rgb(1, 7, 44);
    
    --pill-color: #738ce6;
    --pill-color-hovered: #657cd1;
    
    --report-link-color: #596cb1;
    --report-link-color-hovered: #5566a7;
    
    --experience-color-hovered: #8fb9e4;

    --theme-btn-light: #fff;
    --theme-btn-dark: #000;
}

html[theme='dark'] {
    --text-color: #ebeceb;
    --background: #1b222b;
    
    --text-color-light: #f8f8f8;
    --text-color-important: white;

    --pill-color: #2f5597;
    --pill-color-hovered: #345ea5;
    
    --report-link-color: #b4c7e7;
    --report-link-color-hovered: #b4c7e7b7;
    
    --experience-color-hovered: #1f354b4f;
    
    --theme-btn-light: #000;
    --theme-btn-dark: #fff;
}

/* https://mwichary.medium.com/dark-theme-in-a-day-3518dde2955a */
html.color-theme-in-transition,
html.color-theme-in-transition *,
html.color-theme-in-transition *:before,
html.color-theme-in-transition *:after {
    transition-delay: 0 !important;
    transition: color 750ms linear !important;
    -moz-transition: color 750ms linear !important;
    -webkit-transition: color 750ms  linear !important;
    transition: background-color 750ms linear !important;
    -moz-transition: background-color 750ms linear !important;
    -webkit-transition: background-color 750ms linear !important;
}

html, body, main {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

body {
    margin: auto;
    color: var(--text-color);
	font-family: Calibri, sans-serif;
    background-color: var(--background);
}

nav {
    height: 100%;
    display: flex;
    position: fixed;
    align-items: center;
    font-family: Arial, Helvetica, sans-serif;
}

p {
    line-height: 1.2em;
}

section {
    min-height: 100%;
    margin-left: 490px;
    margin-right: 30px;
}

/* Navigation Bar */
.nav-bar {
    opacity: 0;
    margin-left: 28px;
    visibility: hidden;
    margin-bottom: 10px;
    transition: opacity 500ms linear, visibility 500ms linear;
}

.nav-bar.visible {
    opacity: 1;
    visibility: visible;
}

.nav-list {
    list-style-type:none;
    vertical-align: middle;
}

.nav-list:hover > li {
    opacity: 0.75;
}

.nav-list > li:hover {
    opacity: 1;
}

.nav-link {
    float: left;
    font-size: 48px;
    margin-bottom: 49px;
    text-decoration: none;
    text-transform: uppercase;
    color: var(--text-color-important);
}

.nav-link.active {
    font-weight: bold;
}

/* Landing */
.landing-section {
    padding: 0;
    height: 100%;
    display: flex;
    margin-left: 30px;
    align-items: center;
    flex-direction: column;
}

.landing-image-container {
    width: 100%;
    display: flex;
    min-height: inherit;
}

.landing-img {
    width: 33%;
    margin: 30px;
    display: flex;
    object-fit: cover;
    border-radius: 2px;
    transition: opacity 1s linear;
}

/* About */
.about-section {
    padding-top: 55px;
    margin-right: 30px;
}

.about-section > p {
    font-size: 2.2em;
    padding-bottom: 30px;
}

/* Experience */
.experience-section {
    margin-right: 30px;
    padding-bottom: 30px;
}

.experience-body {
    display: block;
    margin-left: 400px;
    text-decoration: none;
    color: var(--text-color);
    padding: 20px 20px 5px 20px;
}

.experience-header {
    margin: 0;
    padding: 0;
    display: inline;
    font-size: 2.7em;
    font-weight: normal;
}

.experience-date {
    float: left;
    padding: 20px;
    margin-top: 12px;
    font-size: 1.75em;
    position: absolute;
    font-style: italic;
    font-weight: normal;
}

.experience-skill-container {
    padding-top: 30px;
}

.experience-skill {
    font-size: large;
    font-weight: bold;
    margin-right: 20px;
    border-radius: 16px;
    padding: 5px 25px 5px 25px;
    border: 0px solid transparent;
    color: var(--text-color-light);
    background-color: var(--pill-color);
}

.experience-report {
    right: 0;
    position: absolute;
    border-radius: 12px;
    text-decoration: none;
    margin: 30px 55px 0px 0px;
    background-color: transparent;
    border: 2px solid var(--pill-color);
}

.experience-report:hover {
    cursor: pointer;
    border: 2px solid transparent;
    background-color: var(--pill-color-hovered);
}

.experience-body:hover,
.experience-report:hover ~ .experience-body {
    cursor: pointer;
    border-radius: 16px;
    background-color: var(--experience-color-hovered);
}

.experience-report::before {
    width: 50px;
    height: 35px;
    content: "WTR";
    display:flex;
    font-size: 20px;
    font-weight:bold;
    flex-direction:row;
    align-items:center;
    font-family:courier;
    justify-content:center;
    color:var(--text-color-important);
}

.experience-section > div {
    display: flex;
    flex-direction: column;
}

.experience-body > p {
    font-size: 2.1em;
    margin: 20px 20px 20px 0px;
}

/* Projects */
.project-section {
    margin-right: 30px;
    padding-bottom: 30px;
}

.project-container {
    display: block;
    text-decoration: none;
    color: var(--text-color);
    padding: 20px 20px 5px 20px;
}

.project-header {
    margin: 0;
    padding: 0;
    display: inline;
    font-size: 2.7em;
    font-weight: normal;
    text-decoration: none;
}

.project-body {
    display: flex;
    padding-right: 30px;
    flex-direction: row;
}

.project-details {
    font-size: 1.75em;
}

.project-image {
    max-width: 100%;
    align-self: center;
    padding: 0px 50px 0px 50px;
}

/* Contact */
.contact-section {
    display: flex;
    width: max-content;
    align-self: center;
    flex-direction: column;
    justify-content: center;
}

.contact-container {
    display: flex;
    margin-right: 20px;
    flex-direction: row;
    text-decoration: none;
}

.contact-icon-dark,
.contact-icon-light {
    opacity: 0;
    width: 40px;
    height: 40px;
    display: none;
    padding-left: 2px;
    padding-top: 30px;
    margin-right: 60px;
    padding-bottom: 15px;
}

.contact-icon-dark.active,
.contact-icon-light.active {
    opacity: 1;
    display: flex;
}

.contact-pill {
    flex-grow: 1;
    padding: 20px;
    text-indent: 6px;
    max-width: 500px;
    font-size: xx-large;
    text-anchor: middle;
    border-radius: 64px;
    margin: 10px 0px 10px 0px;
    color: var(--text-color-light);
    background-color: var(--pill-color);
}

.contact-container:hover > .contact-icon-dark,
.contact-container:hover > .contact-icon-light {
    border-bottom: 5px dotted var(--pill-color-hovered);
}

.contact-container:hover > .contact-pill {
    background-color: var(--pill-color-hovered);
}

/* Theme Button */
.theme-btn {
    opacity: 0;
    left: 60px;
    width: 50px;
    height: 50px;
    bottom: 20px;
    display: flex;
    cursor: pointer;
    position: fixed;
    visibility: hidden;
    border: 0px solid transparent;
    background-color: transparent;
    transition: opacity 500ms linear, visibility 500ms linear;
}

.theme-btn.visible {
    opacity: 1;
    visibility: visible;
}

.theme-crescent-container {
    left: 60px;
    bottom: 20px;
    display: flex;
    position: fixed;
    flex-direction: row;
    transition: bottom 0.3s;
}

.theme-crescent-light {
    width: 50px;
    height: 50px;
    border: 0px solid transparent;
    border-radius: 150px 150px 150px 150px;
    background-color: var(--theme-btn-light);
}

.theme-crescent-dark {
    left: 25px;
    width: 24px;
    height: 48px;
    margin-top: 1px;
    position: absolute;
    border: 0px solid transparent;
    border-radius: 0px 150px 150px 0px;
    background-color: var(--theme-btn-dark);
}

.theme-btn:hover > .theme-crescent-container {
    bottom: 25px;
    transition: bottom 0.3s;
    transition-delay: 0 !important;
}

/* Static */
.project-version-container {
    bottom: 0;
    right: 10px;
    display: flex;
    position: fixed;
}

/* General */
.noline {
    color: transparent;
    background-color: transparent;
}

/* https://stackoverflow.com/a/4407335 */
.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}

/* Animations */
.scroll-fade-in-up {
    opacity: 0;
    visibility: hidden;
}

.scroll-fade-in-up-active {
    animation: 0.75s both fadeInUp;
}

@keyframes fadeInUp {
    from {
        transform: translateY(50px);
        visibility: hidden;
        opacity: 0;
    }
    to {
        transform: translateY(0);
        visibility: visible;
        opacity: 1;
    }
}

